# RAGu

./: .env.example  .gitignore  README.md  pyproject.toml
eval/: musique.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: AnswerPanel.tsx  ChatThread.tsx  CitationCard.tsx  Composer.tsx  PageViewer.tsx  QueryBar.tsx  ReferencesPanel.tsx  TraceBox.tsx  TracePanel.tsx  WorkingSet.tsx
src/ragu/: __init__.py  app.py  cli.py  factory.py  render.py
src/ragu/adapters/: __init__.py  chunking.py  contextualizer.py  embedding.py  llm.py  retrieval.py  tokens.py
src/ragu/adapters/ingestion/: __init__.py  files.py  geometry.py  ocr.py  pdf.py
src/ragu/adapters/reasoning/: __init__.py  vomero.py
src/ragu/adapters/storage/: __init__.py  lance.py  memory.py
src/ragu/config/: __init__.py  settings.py
src/ragu/core/: __init__.py  models.py
src/ragu/pipeline/: __init__.py  grounding.py  indexer.py  working_set.py
src/ragu/ports/: __init__.py  chunking.py  embedding.py  llm.py  memory.py  reasoning.py  retrieval.py  storage.py  tokens.py
src/ragu/web/: __init__.py  __main__.py  server.py
tests/: test_app.py  test_chunking.py  test_geometry.py  test_grounding.py  test_ingestion.py  test_models.py  test_reasoning.py  test_retrieval_slice.py
